# organ

./: duality.hs  organ.cabal  readme.md  stack.yaml
Organ/: organ.cabal
Organ/src/: Organ.hs
Organ/src/Data/Functor/: Nly.hs
Organ/src/Data/Vector/Mutable/Indexed/: Length.hs
Organ/src/Data/Vector/Unboxed/Mutable/Indexed/: Length.hs
Organ/src/GHC/TypeLits/: Extra.hs
Organ/src/Organ/: Bundles.hs  Streams.hs
Organ/src/Organ/Fusion/: Source.hs
src/: Organ.hs
src/Data/: Vec.hs  VecLit.hs
src/Organ/: Bundles.hs
src/Organ/Fusion/: Source.hs
