name:                organ
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jean Philippe Bernardy, Josef Svenningson, Pepe Iborra
maintainer:          pepeiborra@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Organ
                       Organ.Fusion.Source
                       Organ.Bundles
                       Data.VecLit
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base, contravariant, newtype-generics, primitive, vector, foldl, ghc-prim
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -O2

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:      test
  build-depends:       base, organ, hspec, checkers, QuickCheck >= 2.9, hspec-checkers
  default-language:    Haskell2010