name:                organ
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jean Philippe Bernardy,
                       Josef Svenningson,
                       Pepe Iborra
maintainer:          pepeiborra@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Organ
                       Organ.Fusion.Source
                       Organ.Bundles
                       Organ.Streams
                       Data.Vector.Unboxed.Mutable.Indexed.Length
                       Data.Vector.Mutable.Indexed.Length
                       GHC.TypeLits.Extra
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base,
                       constraints,
                       contravariant,
                       finite-typelits,
                       lens,
                       newtype-generics,
                       primitive,
                       vector,
                       vector-sized,
                       foldl,
                       ghc-prim
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wno-name-shadowing -Wno-missing-signatures

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:      test
  build-depends:       base,
                       organ,
                       hspec,
                       checkers,
                       QuickCheck >= 2.9,
                       hspec-checkers
  default-language:    Haskell2010